# formal-ledger-specifications

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  ComputationalRelation.agda  DecEq.agda  DeriveComp.agda  Everything.agda  FinMap.agda  FinSet.agda  HSLedger.agda  HSLedgerTest.hs  LEGACY_CI.md  Ledger.agda-lib  Ledger.lagda  Makefile  NIX_CONFIG_AND_USAGE.md  NOTICE  PDF-style-guide.md  Prelude.agda  PreludeMeta.agda  README.md  Readme.md  SECURITY.md  Shakefile.hs  TEX2MD_MIGRATION.md  TROUBLESHOOTING.md  TacticReasoning.agda  cabal.project  conway-ledger-missing.txt  default.nix  env  flake.nix  fls-shake.cabal  fls-shake.nix  formal-ledger.agda-lib  formal-midnight.agda-lib  index.html  ledgerSrc  outputs  (+5 more)
agda-fls/: agda-fls.cabal
agda-fls/nix/: agda-fls.nix  default.nix
agda-fls/src/: Main.hs
build-tools/agda/: .gitignore  default.nix  flake.nix  fls-agda.cabal  fls-agda.nix
build-tools/agda/data/: Agda.js
build-tools/agda/nix/: fls-agda.nix  lib.nix
build-tools/agda/src/: Main.hs
build-tools/agda/test/: Test0.agda
build-tools/shake/: Main.hs  flake.nix  fls-shake.cabal  fls-shake.nix
build-tools/shake/nix/: fls-shake.nix
build-tools/shake/src/: Main.hs
conformance-example/: README.md  cabal.project  conformance-example.cabal
conformance-example/test/: UtxowSpec.hs
docs/MidnightExample/hs-src/: Lib.hs  midnight-example.cabal
hs/: cardano-ledger-executable-spec.cabal  package.yaml
hs-src/: Lib.hs  cardano-ledger-executable-spec.cabal
hs/Code/Ledger/: Enact.hs
hs/MAlonzo/Code/: MyDebugOptions.hs  Prelude.hs  PreludeMeta.hs
src/: AgdaTexVec.hs  BooleanAlgebra.agda  CardanoLedger.agda  CardanoLedgerSafe.agda  ComputationalRelation.agda  DecEq.agda  DeriveComp.agda  Error.lagda  EssentialAgda.lagda  EssentialAgda.lagda.md  Everything.agda  Everything.agdai  FinMap.agda  FinSet.agda  FiniteMap.agda  FormalLedger.agda  FormalLedgerSafe.agda  HSLedger.agda  HSLedgerTest.hs  Html.agda  Ledger.agda  Ledger.agda-lib  Ledger.lagda  Ledger.lagda.md  ListEquality.agda  Makefile  Meta.agda  MyDebugOptions.agda  MyDebugOptions.agdai  MyDebugOptions.lagda.md  Prelude.agda  Prelude.agdai  Prelude.lagda.md  PreludeExt.agda  PreludeImports.agda  PreludeImportsDecEq.agda  PreludeMeta.agda  ToRecord.agda  agda-ledger-executable-spec.cabal  agda2vec.py  (+7 more)
src/Algebra/: Literals.agda  PairOp.agda
src/Axiom/: Set.agda
src/Axiom/Set/: Factor.agda  List.agda  Map.agda  Properties.agda  Rel.agda  Sum.agda  TotalMap.agda  TotalMapOn.agda
src/Class/: HasCast.agda  To.agda
src/Class/HasCast/: Base.agda  Derive.agda  Instances.agda
src/Data/: FinMap.agda  FinSet.agda  Singleton.agda
src/Data/FinMap/: Core.agda  Properties.agda
src/Data/FinSet/: Core.agda  Properties.agda
src/Data/Integer/: Ext.agda
src/Data/List/: Ext.agda
src/Data/Product/: Ext.agda
src/FinMap/: Properties.agda
src/FinMap/Properties/: Algebra.agda  Equality.agda  Membership.agda
src/FinSet/: Properties.agda
src/FinSet/Properties/: Algebra.agda  Equality.agda  Membership.agda
src/Foreign/: Convertible.agda  Convertible.agdai  Convertible.lagda.md  HSLedger.agda  HaskellTypes.agda  HaskellTypes.lagda.md  LedgerTypes.agda  Marshall.agda
src/Interface/: Bifunctor.agda  Bifunctor.agdai  ComputationalRelation..lagda.md  ComputationalRelation.agda  ComputationalRelation.agdai  ComputationalRelation.lagda.md  Contains.agda  DecEq.agda  DecRel.agda  DecRel.agdai  Default.agda  Functor.agda  Functor.agdai  HasAdd.agda  HasAdd.agdai  HasAggregate.agda  HasEmptyMap.agda  HasEmptySet.agda  HasEmptySet.agdai  HasFilter.agda  HasOrder.agda  HasOrder.agdai  HasPartialOrder.agda  HasPreorder.agda  HasRawPartialOrder.agda  HasSingleton.agda  HasSingleton.agdai  HasStrictTotalOrder.agda  HasSubset.lagda.md  HasSubtract.agda  HasSubtract.agdai  HasSubtract.lagda.md  Hashable.agda  Hashable.agdai  Hashable.lagda.md  HashableSet.agda  HashableSet.agdai  IsCommutativeMonoid.agda  IsCommutativeMonoid.agdai  IsSet.agda  (+11 more)
src/Ledger/: Abstract.agda  Abstract.agdai  Address.agdai  Address.lagda  BaseTypes.agdai  BaseTypes.lagda  Certs.lagda  Chain.agdai  Chain.lagda  Conway.agda  Conway.lagda.md  ConwaySafe.agda  Core.lagda.md  Costs.lagda  Crypto.agdai  Crypto.lagda  CycleDet.lagda  Deleg.agdai  Deleg.lagda  Delegation.lagda  Dijkstra.lagda.md  Enact.agdai  Enact.lagda  Epoch.agda  Epoch.agdai  Epoch.lagda  EssentialAgda.agdai  EssentialAgda.lagda  EssentialAgda.lagda.md  ExampleExUnit.agda  ExampleExUnit.agdai  Fees.lagda  Gov.agda  Gov.agdai  Gov.lagda  GovStructure.agda  GovStructure.agdai  GovernanceActions.agdai  GovernanceActions.lagda  HSLedgerTest.hs  (+65 more)
src/MidnightExample/: HSLedger.agda  Ledger.lagda  Main.hs  PDF.lagda  Types.agda  agda-ledger-executable-spec.cabal  midnight-example.cabal
src/Reflection/: Debug.agda  Ext.agda  Syntax.agda  TCI.agda
src/ScriptVerification/: AbstractImplementation.agda  AllExamples.agda  DataImplementation.agda  Example2.agda  Examples.agda  HelloWorld.agda  LedgerImplementation.agda  LedgerImplementation2.agda  LedgerTypes.agda  Lib.agda  Lib2.agda  MultiSig.agda  MultiSigDatum.agda  MultiSigTudor.agda  NFTExample.lagda  Prelude.agda  SimpleScript.agda  StructuredContracts.lagda  SucceedIfNumber.agda  SymbolicData.agda  question  tmpFile
src/Tactic/: AnyOf.agda  Assumption.agda  ByEq.agda  Case.agda  ClauseBuilder.agda  Constrs.agda  Defaults.agda  DeriveComp.agda  DeriveShow.agda  EquationalReasoning.agda  GenError.agda  Helpers.agda  Inline.agda  Premises.agda  ReduceDec.agda  Substitute.agda
src/Test/: AbstractImplementation.agda  AbstractImplementation.lagda.md  ArgTurningIntoMeta.agda  Examples.lagda.md  GetType.agda  LedgerImplementation.lagda.md  Lib.lagda.md  Prelude.lagda.md  StructuredContracts.lagda.md  SymbolicData.agda  SymbolicData.lagda.md
src/Valuation/: StateMachine.agda
src/latex/: Diagrams.tex  Notation.tex  acronyms.tex  agda-latex-macros.sty  agda-macros.sty  agda.sty  agda2vec.py  conway-ledger.tex  definitions.tex  fls-macros.sty  hldiff_list.txt  iohk.sty  macros.sty  preamble.tex  references.bib
(+6202 files in other folders)
