cabal-version:  >=1.10
name:           fls-shake
version:        0.1.0.0
build-type:     Simple

executable fls-shake
  main-is:             Shakefile.hs
  build-depends:       base >=4.12 && <5,
                       shake,
                       binary,
                       deepseq,
                       hashable,
                       text,
                       bytestring
  default-language:    Haskell2010
