cabal-version:      2.4
name:               conformance-example
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:

common globalOptions
    default-language: Haskell2010
    build-depends: base
    default-extensions:
        PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms DeriveGeneric
    ghc-options:
        -Wno-overlapping-patterns

executable test
    import: globalOptions
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
        UtxowSpec
    build-depends:
        cardano-ledger-executable-spec,
        hspec,
        HUnit,
        text
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options:
        -Wall
        -threaded -rtsopts -with-rtsopts=-N
        -fno-warn-type-defaults
