cabal-version:      2.4
name:               cardano-ledger-executable-spec
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:

common globalOptions
    default-language: Haskell2010
    build-depends: base
    default-extensions:
        PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms DeriveGeneric
    ghc-options:
        -Wno-overlapping-patterns

library
    import: globalOptions
    hs-source-dirs: src
    exposed-modules:
        MAlonzo.Code.Ledger.Foreign.API
    build-depends:
        text,
        ieee
-- This will be generated automatically when building with nix
    other-modules:
