cabal-version:      2.4
name:               simple-ledger-executable-spec
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        HSLedgerTest

    other-extensions:
        CPP PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms

    build-depends:
        base ^>=4.14.3.0,
        text ^>=1.2.4.1,
        ieee

    ghc-options: -Wno-overlapping-patterns
    hs-source-dirs:   .
    default-language: Haskell2010
    other-modules:
