cabal-version: >=1.10
name: fls-shake
version: 0.0.0.1
build-type: Simple

executable fls-shake
  ghc-options:
    -O3
    -threaded
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base >=4.12 && <5,
    shake,
    binary,
    deepseq,
    hashable,
    text,
    bytestring,
    fsnotify,
    directory,
    split
  default-language: Haskell2010
