cabal-version:      2.4
name:               cardano-ledger
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable main
    main-is: Main.hs
    ghc-options: -Wno-missing-home-modules
    build-depends:
        base,
        text,
        ieee,
        tree-diff,
        cardano-ledger

library
    exposed-modules:
        Lib
    build-depends:
        base,
        text,
        ieee,
        tree-diff
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options:
        -Wno-overlapping-patterns
    other-extensions:
        CPP PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms DeriveGeneric
-- This will be generated automatically when building with nix
    other-modules:
