cabal-version:      2.4
name:               midnight-example
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andre Knispel
maintainer:         andre.knispel@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable main
    main-is: Main.hs
    ghc-options: -Wno-missing-home-modules
    build-depends:
        base,
        text,
        ieee,
        midnight-example

library
    exposed-modules:
        Lib
    build-depends:
        base,
        text,
        ieee
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options:
        -Wno-overlapping-patterns
    other-extensions:
        CPP PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms

-- This will be generated automatically when building with nix
    other-modules:
